@@ -37,9 +37,11 @@ Added Low memory detection to stage2 FORTH and now exits gracefully
 Minor refactor of stage3 FORTH by reepa
 Stage3 FORTH WHILE's compile-time stack effect is now consistent with gforth
 Changed behavior of stage2 FORTH's CREATE to better match the way it usually works.
+Stage0 vm now will show an error message if the size of the rom exceeds the available memory
 
 ** Fixed
 Updated checksums to reflect changes in stage2 FORTH
+Fixed dis behavior in regards to hex values in strings
 
 ** Removed
 the HERE and DP! are gone from ' now in stage3 FORTH
